[package]
name = "postgres-protocol"
version = "0.5.0-alpha.1"
authors = ["Steven Fackler <sfackler@gmail.com>"]
edition = "2018"
description = "Low level Postgres protocol APIs"
license = "MIT/Apache-2.0"
repository = "https://github.com/sfackler/rust-postgres-protocol"
readme = "../README.md"

[dependencies]
base64 = "0.10"
byteorder = "1.0"
bytes = "0.4"
fallible-iterator = "0.2"
generic-array = "0.13"
md5 = "0.6"
memchr = "2.0"
rand = "0.7.2"
ring = "0.16.9"
stringprep = "0.1"
